# social_api_cdk_rust

./: .gitignore  README.md  cdk.json  package-lock.json  package.json
graphql/: schema.graphql
lib/: social_api_cdk_rust-stack.ts
resolvers/comment/: createComment.js  getCommentsPerPost.js
resolvers/events/: putEvents.js
resolvers/followers/: afterBatchGetFollowerDetails.js  batchGetFollowerDetails.js  followUser.js  getFollowerIds.js
resolvers/post/: createPost.js  deletePost.js  generatePostImages.js  getAllPosts.js  getPost.js  getUserPerComment.js  getUserPerPost.js
resolvers/user/: createUserAccount.js  formatUserAccountInput.js  getUserAccount.js  getUserByEmail.js  subscribeToUsers.js  updateUserAccount.js
rust-function/: Cargo.toml
rust-function/src/: model.rs  send-message.rs  utils.rs
state_workflow/: send_email_workflow.asl.json
test/: social_api_cdk_rust.test.ts
